--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">DIKMADASH RANO O`QUV MARKAZI</h2>
-                <p class="animated fadeInUp">Assalomu alekum Dikmedash Rano o`quv markaziga hush kelipsiz</p>
+                <h2 class="animated fadeInDown">DIKMEDASH RANO O`QUV MARKAZI</h2>
+                <p class="animated fadeInUp">Assalomu alekum Dikmedash Rano o`quv markaziga hush kelibsiz</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Biz haqimizda</a>
               </div>
             </div>
@@ -254,14 +254,14 @@
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>Ishlar va Kurslar</h2>
-            <a href="tel:+998 99 324 15 86"><h6>1-Pazandachlik-qandolatchilik 2-oy</h3></a>
-            <a href="tel:+998 99 177 07 69"><h6>2-Bugalterya hisobot asoslari 2-oy</h3></a>
-            <a href="tel:+998 99 177 07 69"><h6>3-Servis(Sartarosh-usta) 2-oy</h3></a>
-            <a href="tel:+998 94 944 11 62"><h6>4-Qo`lda-to`qish 2-oy</h3></a>
-            <a href="tel:+998 99 641 59 04"><h6>5-Ro`botatexnika asoslari 2-oy</h3></a>
-            <a href="tel:+998 90 110 92 80"><h6>6-Bichish tikish 2-oy</h3></a>
-            <a href="tel:+998 99 177 07 69"><h6>7-Kichik biznes va tadbirkolik 2-oy</h3></a>
-            <a href="tel:+998 99 409 02 23"><h6>8-Kompyuter savodxonligi 1-oy</h3></a>
+            <a href="tel:+998 99 324 15 86"><h6>1.Pazandachlik-qandolatchilik 2-oy</h3></a>
+            <a href="tel:+998 99 177 07 69"><h6>2.Bugalterya hisobot asoslari 2-oy</h3></a>
+            <a href="tel:+998 99 177 07 69"><h6>3.Servis(Sartarosh-usta) 2-oy</h3></a>
+            <a href="tel:+998 94 944 11 62"><h6>4.Qo`lda-to`qish 2-oy</h3></a>
+            <a href="tel:+998 99 641 59 04"><h6>5.Ro`botatexnika asoslari 2-oy</h3></a>
+            <a href="tel:+998 90 110 92 80"><h6>6.Bichish tikish 2-oy</h3></a>
+            <a href="tel:+998 99 177 07 69"><h6>7.Kichik biznes va tadbirkolik 2-oy</h3></a>
+            <a href="tel:+998 99 409 02 23"><h6>8.Kompyuter savodxonligi 1-oy</h3></a>
             <div class="heading-line"></div>
             <p>Biz so'nggi 1 yil davomida noyob raqamli mahsulotlar, platformalar va tajribalarni yaratmoqdamiz.</p>
           </div>
@@ -331,8 +331,17 @@ Oddiy qilib aytganda, sayt – bu Internetda joylashgan, ba’zi ma’lumotlarni
             <p>Biz so'nggi 1 yil davomida noyob raqamli mahsulotlar, platformalar va tajribalarni yaratmoqdamiz.</p>
           </div>
         </div>
-      </div>
+      </div> 
       <div class="row">
+
+      </div> <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
+          <div class="box-team wow bounceInUp">
+            <img src="img/rt.jpg"  class="img-circle img-responsive" />
+            <h4>Rita Nurgaziyeva</h4>
+            <p>Basics of entrepreneurship</p>
+          </div>
+        </div>
+      
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/men2.jpg" alt="" class="img-circle img-responsive" />
@@ -347,13 +356,7 @@ Oddiy qilib aytganda, sayt – bu Internetda joylashgan, ba’zi ma’lumotlarni
             <p>Robotik Programing</p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
-          <div class="box-team wow bounceInUp">
-            <img src="img/rt.jpg"  class="img-circle img-responsive" />
-            <h4>Rita Altibekovna</h4>
-            <p>Basics of entrepreneurship</p>
-          </div>
-        </div>
+      
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
           <div class="box-team wow bounceInUp">
             <img src="img/nf.jpg  " alt="" class="img-circle img-responsive" />
